# RPC

./: CMakeLists.txt  README.md  install.sh  tip.txt  uninstall.sh
conf/: rocket.xml  rpc.xml  rpc_client.xml
log/: test_rpc_client_app_20240508_log.0  test_rpc_client_rpc_20240508_log.0  test_rpc_server_app_20240508_log.0  test_rpc_server_rpc_20240508_log.0
makeService/: makeService.py
makeService/template/: CMakeLists.template  CMakeLists_test_template  business_exception.h.template  close.sh  conf.xml.template  interface.cc.template  interface.h.template  main.cc.template  server.cc.template  server.h.template  test_rpc_client.cc.template
rpc/coder/: CMakeLists.txt  abstract_coder.h  abstract_protocol.h  string_coder.h  tinypb_coder.cc  tinypb_coder.cpp  tinypb_coder.h  tinypb_protocol.cc  tinypb_protocol.cpp  tinypb_protocol.h
rpc/common/: CMakeLists.txt  config.cc  config.cpp  config.h  error_code.h  log.cc  log.cpp  log.h  msg_id_util.cc  msg_id_util.cpp  msg_id_util.h  run_time.cc  run_time.h  util.cc  util.cpp  util.h
rpc/net/: CMakeLists.txt  abstract_protocol.h  eventloop.cc  eventloop.cpp  eventloop.h  fd_event.cc  fd_event.cpp  fd_event.h  fd_event_group.cc  fd_event_group.cpp  fd_event_group.h  io_thread.cc  io_thread.cpp  io_thread.h  io_thread_pool.cc  io_thread_pool.cpp  io_thread_pool.h  string_coder.h  time_event.cc  time_event.cpp  time_event.h  timer.cc  timer.cpp  timer.h  wakeup_fd_event.cc  wakeup_fd_event.cpp  wakeup_fd_event.h
rpc/rpc/: CMakeLists.txt  rpc_channel.cc  rpc_channel.cpp  rpc_channel.h  rpc_closure.h  rpc_controller.cc  rpc_controller.cpp  rpc_controller.h  rpc_dispatcher.cc  rpc_dispatcher.cpp  rpc_dispatcher.h
rpc/tcp/: CMakeLists.txt  net_addr.cc  net_addr.cpp  net_addr.h  tcp_acceptor.cc  tcp_acceptor.cpp  tcp_acceptor.h  tcp_buffer.cc  tcp_buffer.cpp  tcp_buffer.h  tcp_client.cc  tcp_client.cpp  tcp_client.h  tcp_connection.cc  tcp_connection.cpp  tcp_connection.h  tcp_server.cc  tcp_server.cpp  tcp_server.h
test/test_all/: CMakeLists.txt  main.cc
test/test_all/conf/: rpc.xml
test/test_all/log/: test_all_app_20240508_log.0  test_all_rpc_20240508_log.0
test/test_all/test_all/comm/: business_exception.h
test/test_all/test_all/interface/: add_test.cc  add_test.h  query_test.cc  query_test.h
test/test_all/test_all/pb/: test_all.pb.cc  test_all.pb.h  test_all.proto
test/test_all/test_all/service/: test_all.cc  test_all.h
test/test_all/test_client/: CMakeLists.txt  test_add_test_client.cc  test_query_test_client.cc
test/test_all/test_client/test_tool_execut/: test_add_test_client  test_query_test_client
testcases/: CMakeLists.txt  order.pb.cc  order.pb.h  test_client.cpp  test_eventloop.cpp  test_log.cpp  test_rpc_client.cc  test_rpc_client.cpp  test_rpc_server.cc  test_rpc_server.cpp  test_tcp.cpp
